Initial front end integration commit
Intial fonrt end check with javafx everything is working good. so commit